--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #0000FF;
+    color: #00F;
 }
 a:hover {
     text-decoration: underline;
