--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #00F;
+    color: #999;
 }
 a:hover {
     text-decoration: underline;
@@ -27,6 +27,7 @@ p {
     font-size: 1em;
     line-height: 1.4em;
     color: #000;
+    width: 250px;
 }
 footer {
     border-top: 1px solid #d5d5d5;
