--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ p {
     line-height: 1.4em;
     color: #000;
     width: 800px;
+    margin: auto;
 }
 footer {
     border-top: 1px solid #d5d5d5;
