--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,12 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-size: 2em;
+    font-family:'Arial';
+}
+h2 {
+    font-size: 1.5em;
+    font-family:'Arial';
 }
 p {
     font-size: 1em;
