--- a/css/main.css
+++ b/css/main.css
@@ -20,12 +20,8 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 2em;
-    font-family:'Arial';
-}
-h2 {
-    font-size: 1.5em;
-    font-family:'Arial';
+    font-size: 3em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
     font-size: 1em;
