--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,14 @@ a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 3em;
+    font-size: 2em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    margin: auto;
+}
+h2 {
+    font-size: 1.5em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    margin: auto;
 }
 p {
     font-size: 1em;
@@ -33,6 +39,7 @@ p {
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
+    margin: auto;
 }
 
 ul.posts { 
