--- a/css/main.css
+++ b/css/main.css
@@ -22,11 +22,13 @@ a:hover {
 h1 {
     font-size: 2em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    width: 800px;
     margin: auto;
 }
 h2 {
     font-size: 1em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    width: 800px;
     margin: auto;
 }
 p {
@@ -40,6 +42,7 @@ p {
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
+    width: 800px;
     margin: auto;
 }
 
