--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@ p {
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     width: 800px;
     margin: auto;
 }
