--- a/css/main.css
+++ b/css/main.css
@@ -55,3 +55,15 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+.column {
+  float: left;
+}
+
+.left {
+  width: 25%;
+}
+
+.right {
+  width: 75%;
+}
