--- a/css/main.css
+++ b/css/main.css
@@ -57,13 +57,19 @@ ul.posts li {
 }
 
 .column {
-  float: left;
+    float: left;
+    width: 800px;
+    margin: auto;
 }
 
 .left {
-  width: 25%;
+    width: 25%;
+    width: 800px;
+    margin: auto;
 }
 
 .right {
-  width: 75%;
+    width: 75%;
+    width: 800px;
+    margin: auto;
 }
