--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ h2 {
     margin: auto;
 }
 p {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Helvetica', 'Verdana', 'Sans-Serif';
     line-height: 1.4em;
     color: #000;
     width: 800px;
